added more values to views and controllers

--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -6,10 +6,10 @@
     <h1>Sign up</h1>
     <form action="" method="">
         <p>
-        <input type="name" id="firstname" name="firstname" placeholder="First Name" required>
+        <input type="text" id="firstname" name="firstname" placeholder="First Name" required>
         </p>
         <p>
-        <input type="name" id="lastname" name="lastname" placeholder="Last Name" required>
+        <input type="text" id="lastname" name="lastname" placeholder="Last Name" required>
        </p>
        <p>
         <input type="email" id="email" name="email" placeholder="Email" required>
@@ -17,6 +17,13 @@
        <p>
         <input type="password" id="password" name="password" placeholder="Password"  minlength="6" required>
        </p>
-       <hr>
+       <p>
+        <input type="password" id="Confimpassword" name="Confirmpassword" placeholder="Confirm Password"  minlength="6" required>
+       </p>
+       <p>
+        <input type="">
+        <button class="btn">  Sign up</button>
+       </p>
+       <p id="switch-form">Already have an account?<a href="/login">Sign in</a></p>
     </form>
 </main>
