added a public file

--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -1,4 +1,7 @@
 <%- include('../includes/head', { pageTitle: 'Signup'}) %>
+<link rel="stylesheet" href="/styles/forms.css">
+<link rel="stylesheet" href="/styles/auth.css">
+
 </head>
 <body>
 <%- include('../includes/header') %>
@@ -21,7 +24,6 @@
         <input type="password" id="Confimpassword" name="Confirmpassword" placeholder="Confirm Password"  minlength="6" required>
        </p>
        <p>
-        <input type="">
         <button class="btn">  Sign up</button>
        </p>
        <p id="switch-form">Already have an account?<a href="/login">Sign in</a></p>
