--- a/views/customer/includes/header.ejs
+++ b/views/customer/includes/header.ejs
@@ -1,4 +1,4 @@
 <header>
-    <div><a href="/">Achore</a></div>
+    <div><a href="/"><img src="\images\vector3.svg" alt=""></a></div>
     <nav></nav>
 </header>
