added header logo and other properties

--- a/views/customer/includes/header.ejs
+++ b/views/customer/includes/header.ejs
@@ -1,4 +1,13 @@
+<link rel="stylesheet" href="/styles/header.css" />
 <header>
-    <div><a href="/"><img src="\images\vector3.svg" alt=""></a></div>
-    <nav></nav>
+  <section class="header">
+    <div>
+      <a href="/"><img src="\images\A3.png" alt="" /></a>
+    </div>
+    <nav id="user-img">
+      <i class="fa-regular fa-user"
+        ><a href=""><img src="\images\user-regular.svg" alt="user" /></a
+      ></i>
+    </nav>
+  </section>
 </header>
