--- a/views/customer/includes/head.ejs
+++ b/views/customer/includes/head.ejs
@@ -13,4 +13,4 @@
 <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap" rel="stylesheet">
     <title><%= pageTitle %> </title>
 
-    <link rel="stylesheet" href="/styles/base.css"
+    <link rel="stylesheet" href="/styles/base.css"/>
