--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -12,7 +12,7 @@
     </div>
   <div class="signup-form">
     <h1>Sign up</h1>
-    <form action="" method="">
+    <form action="/signup" method="POST">
         <p>
         <input type="text" id="firstname" name="firstname" placeholder="First Name"  class="form-specifics"  required>
         </p>
