--- a/views/customer/includes/header.ejs
+++ b/views/customer/includes/header.ejs
@@ -5,9 +5,17 @@
       <a href="/"><img src="\images\A3.png" alt="" /></a>
     </div>
     <nav id="user-img">
-      <i class="fa-regular fa-user"
-        ><a href=""><img src="\images\user-regular.svg" alt="user" /></a
-      ></i>
+     <img src="\images\user-regular.svg" alt="user" />  
+      <div>
+        <button aria-label="Cart" id="solar-cart-btn">
+          <div>
+            Cart
+          </div> 
+            <img src="\images\cart-shopping-solid.svg" alt="">
+            <!-- <span class="ml-half the-circle-icon">0</span> -->
+        </button>
+      </div>
+      <!-- <img src="\images\cart2.png" alt=""> -->
     </nav>
   </section>
 </header>
