--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -13,7 +13,7 @@
   <div class="signup-form">
     <h1>Sign in</h1>
 
-    <form action="/signin" method="POST">
+    <form action="/login" method="POST">
       <input type="hidden" value="<%= locals.csrfToken %>" name="_csrf">
        <p>
         <input type="email" id="email" name="email" placeholder="Email"  class="form-specifics" required>
