--- a/views/customer/product/solar-main-page.ejs
+++ b/views/customer/product/solar-main-page.ejs
@@ -2,13 +2,15 @@
 </head>
 <body class="main-page">
     <%-include('../../shared/includes/header') %>
-          <!-- <ul>
+          <ul>
             <% if(locals.isAuth) {%>
-            <li>
+            <li><form action="/logout" method="POST">
+              <input type="hidden" value="<%= locals.csrfToken %>" name="_csrf">
               <button>Logout</button>
+            </form>  
             </li>
             <% }%>  
-            </ul> -->
+            </ul>
         </section>
       </header>
 <main>
