adding the structure for all products

--- a/views/customer/auth/loggedIn-profile.ejs
+++ b/views/customer/auth/loggedIn-profile.ejs
@@ -1,10 +1,10 @@
-<%- include('../shared/includes/head', { pageTitle: 'loggedIn-profile'}) %>
+<%- include('../../shared/includes/head', { pageTitle: 'loggedIn-profile'}) %>
 <link rel="stylesheet" href="/styles/loggedIn-profile.css">
 <link rel="stylesheet" href="/styles/loggedIn-description.css">
 
 </head>
 <body>
-<%- include('../shared/includes/header') %>
+<%- include('../../shared/includes/header') %>
 <main class="profile-main">
         <ul class="profile">
           <article>
@@ -106,4 +106,4 @@
 </ul>
 </main>
 
-<%- include('../shared/includes/footer') %>
+<%- include('../../shared/includes/footer') %>
