--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -11,7 +11,13 @@
         </p>
             </section>
             <section>
-                <p> Alist of products...</p>
+                <ul>
+                    <% for(const product of products ) {%>
+                    <li>
+                        <%- include('includes/product-item', {product: product})  %>
+                    </li>
+                    <% } %>
+                </ul>
             </section>
            
         </main>
