--- a/views/admin/products/new-product.ejs
+++ b/views/admin/products/new-product.ejs
@@ -1,15 +1,15 @@
-<%- include('../../shared/includes/head', { pageTitle: 'All products'}) %>
+<%- include('../../shared/includes/head', { pageTitle: 'new products'}) %>
 <head>
   <body>
     <main>
       <h1>Add new Product</h1>
-      <form action="" method="">
+      <form action="/admin/products?_csrf=<%= locals.csrfToken %>" method="POST" enctype="multipart/form-data">
+      
         <p>
           <label for="">Title</label>
           <input type="text" id="title" name="title" required />
         </p>
-      </form>
-      <label for="image">Image</label>
+        <label for="image">Image</label>
       <input
         type="file"
         id="image"
@@ -31,7 +31,7 @@
         <input
         type="number"
         id="price"
-        name="pricey"
+        name="price"
       min="0.01"
       step="0.01"
       required
@@ -51,6 +51,8 @@
         <button type="reset">Reset</button>
         <button >save</button>
     </p>
+      </form>
+      
     </main>
     <%-include('../../shared/includes/footer') %>
   </body>
