--- a/views/admin/products/includes/product-item.ejs
+++ b/views/admin/products/includes/product-item.ejs
@@ -1,8 +1,11 @@
 <article>
     <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
-    <h2><%= product.title %> </h2>
-    <div>
-        <a href="/admin/products/<%= product.id %>">View & Edit</a>
-        <button>Delete</button>
+    <div class="product-item-content">
+        <h2><%= product.title %> </h2>
+        <div>
+            <a href="/admin/products/<%= product.id %>">View & Edit</a>
+            <button>Delete</button>
+        </div>
     </div>
+  
 </article>
