added more error pages,middlewares and routes

--- a/views/shared/includes/nav-items.ejs
+++ b/views/shared/includes/nav-items.ejs
@@ -10,7 +10,7 @@
     <nav id="user-img"><a href="/login"> <img src="\images\user-regular.svg" alt="user" />  </a>
     
       <div>
-        <% if(!local.isAdmin) {%>
+        <% if(!locals.isAdmin) {%>
         <button aria-label="Cart" id="solar-cart-btn">
           <div>
             Cart
