--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -1,4 +1,5 @@
 <%- include('../../shared/includes/head', { pageTitle: 'All products'}) %>
+<script src="/script/product-management.js" defer></script>
 <head>
     <body>
         <main>
