--- a/views/admin/products/includes/product-item.ejs
+++ b/views/admin/products/includes/product-item.ejs
@@ -1,10 +1,10 @@
-<article>
+<article class="product-item">
     <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
     <div class="product-item-content">
         <h2><%= product.title %> </h2>
         <div>
             <a href="/admin/products/<%= product.id %>">View & Edit</a>
-            <button>Delete</button>
+            <button data-productid="<%= product.id %>" data-csrf="<%= locals.csrfToken %>">Delete</button>
         </div>
     </div>
   
