--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -15,7 +15,7 @@
                 <ul>
                     <% for(const product of products ) {%>
                     <li>
-                        <%- include('includes/product-item', {product: product})  %>
+                        <%- include('../../shared/includes/product-item', {product: product})  %>
                     </li>
                     <% } %>
                 </ul>
