finished with uploading cutomers files

--- a/views/shared/includes/nav-items.ejs
+++ b/views/shared/includes/nav-items.ejs
@@ -1,6 +1,6 @@
 
     <div class="header-pack">
-      <a href="">Shop</a>
+      <a href="/products">Shop</a>
       <a href="">Energy</a>
       <a href="">About us</a>
       <a href="">Rewards</a>
