--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -1,4 +1,5 @@
 <%- include('../../shared/includes/head', { pageTitle: 'Your Cart'}) %>
+<script src="/script/cart-item-management.js" defer></script>
 </head>
 
 <body>
