added saving orders in db logic

--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -6,18 +6,24 @@
     <%-include('../../shared/includes/header') %>
     <main>
         <h1>Your Cart</h1>
-       <ul id="cart-items">
-        <% for (const cartItem of locals.cart.items ) {%>
-        <li>
-            <%- include('includes/cart-item', {item: cartItem}) %>
-             </li>
-             <% } %>
-       </ul>
+        <ul id="cart-items">
+          <% for (const cartItem of locals.cart.items) { %>
+            <li>
+              <%- include('includes/cart-item', { item: cartItem }) %>
+            </li>
+          <% } %>
+        </ul>
+        <div id="cart-total">
+          <p>Total: $<span id="cart-total-price"><%= locals.cart.totalPrice.toFixed(2) %></span></p>
     
-       <div id="cart-total">
-        <p>Total: $<span id="cart-total-price"> <%= locals.cart.totalPrice.toFixed(2) %> </span></span></p>
-
-        <button class="btn"> Buy Products</button>
-       </div>
-    </main>
+          <% if (locals.isAuth) { %>
+            <form action="/orders" method="POST">
+              <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
+            <button class="btn"> Buy Products</button>
+            </form>
+          <% } else { %>
+            <p id="cart-total-fallback">Log in to proceed and purchase the items.</p>
+          <% } %>
+        </div>
+      </main>
     <%-include('../../shared/includes/footer') %>
