working on more orders logic

--- a/views/shared/includes/nav-items.ejs
+++ b/views/shared/includes/nav-items.ejs
@@ -3,7 +3,7 @@
       <a href="/products">Shop</a>
       <a href="">Energy</a>
       <a href="">About us</a>
-      <a href="">Rewards</a>
+      <a href="/orders">Orders</a>
     </div>
 
     <% if(!locals.isAuth) {%>
