--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -89,8 +89,10 @@ a:hover {
 
 .badge {
     margin-left: var(--space-2);
-    padding: 0.15rem var(--space-4);
-    border-radius:14rem;
-    background-color: yellow;
+    border-radius: 10rem;
+    background-color: rgb(218 159 60);
+    border: 1px solid black;
     color: black;
+    height: 20px;
+    width: 20px;
 }
