--- a/public/styles/loggedIn-profile.css
+++ b/public/styles/loggedIn-profile.css
@@ -68,6 +68,7 @@ article .time {
     align-items: center;
     text-decoration: none;
     color: rgb(38, 36, 36);
+    transition: 0.3s ease-in;
 }
 
 
@@ -101,6 +102,7 @@ article .time {
     text-align: center;
     color: black;
     font-size: inherit;
+    transition: 0.3s ease-in;
 }
 
 
