--- a/views/shared/includes/product-item.ejs
+++ b/views/shared/includes/product-item.ejs
@@ -1,8 +1,8 @@
 <article class="product-item">
-    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+    <img  src="<%= product.imageUrl %>" alt="<%= product.title %>">
     <div class="product-item-content">
-        <h2><%= product.title %> </h2>
-        <div>
+        <h2 class="products-title"><%= product.title %> </h2>
+        <div class="products-edit">
             <% if (locals.isAdmin) { %> 
             <a href="/admin/products/<%= product.id %>">View & Edit</a>
             <button data-productid="<%= product.id %>" data-csrf="<%= locals.csrfToken %>">Delete</button>
