--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -5,7 +5,7 @@
     <body>
         <%- include('../../shared/includes/header') %>
         <main>
-            <h1 class="product-admin-title" style="color: wheat;" >Product <span>Administration</span> </h1>
+            <h1 class="product-admin-title" style="color: wheat;" >Product <span class="products-span">Administration</span> </h1>
            
             <section>
         <h2>Manage Products</h2>
