--- a/views/customer/product/product-detail.ejs
+++ b/views/customer/product/product-detail.ejs
@@ -8,8 +8,11 @@
     <main id="product-details">
        <header>
         <img src="<%= product.imageUrl  %>" alt="<%= product.title %>">
+        <!-- <img src="<%= product.imageUrl %>" alt=""> -->
         <div id="product-info">
             <h1><%= product.title %></h1>
+            <h3><%= product.summary %></h3>
+            <h4><%= product.description %></h4>
             <p><%= product.price %></p>
             <button id="cartQuantity"  data-productid="<%= product.id %>" data-csrf="<%= locals.csrfToken %>" > Add to Cart</button>
         </div>
