--- a/views/customer/product/all-products.ejs
+++ b/views/customer/product/all-products.ejs
@@ -5,7 +5,7 @@
 <body>
     <%-include('../../shared/includes/header') %>
     <main>
-        <h1>Best Sellers</h1>
+        <h1 class="products-title">Best <span class="products-span">Seller</span> </h1>
         <ul class="products-ul">
             <% for (const product of products) { %>
                 <li>
